--- a/src/angular-app/sfchecks/partials/projectSettings.html
+++ b/src/angular-app/sfchecks/partials/projectSettings.html
@@ -77,28 +77,32 @@
 		<div ng-controller="ProjectSettingsSetupCtrl">
 		<form class="well" ng-submit="updateProject()">
 		<div class="row">
-		<div class="span4" style="border:1px solid blue;">
-		<fieldset>
-		<ul class="unstyled">
-		<li ng-click="selectList(listId)" ng-repeat="(listId, list) in project.userProperties.userProfilePickLists"><div class="checkbox"><input type="checkbox"/>{{list.name}}</div></li>
-		</ul>
-		</fieldset>
-		</div><div class="span4" style="border: 1px solid red;">
-		<fieldset>
-		<label>Default Value {{currentListId}}</label>
-		<select></select>
-		<input ng-model="newValue" type="text" placeholder="new value"/>
-		<a ng-click="pickAddItem()"><i class="icon-plus"></i></a>
-		<table>
-		<tbody>
-		<tr ng-repeat="item in project.userProperties.userProfilePickLists.currentListId">
-		<td>{{item.value}}</td><td><a ng-click="pickRemoveItem($index)"><i class="icon-delete"></i></a></td>
-		</tr>
-		</tbody>
-		</table>
-		<ul class="unstyled">
-		<li ng-repeat="">{{}}</li>
-		</ul>
+		<div class="span4">
+		<fieldset class="well">
+			<legend>User Profile</legend>
+			<ul class="unstyled">
+			<li ng-click="selectList(listId)" ng-repeat="(listId, list) in project.userProperties.userProfilePickLists"><div class="checkbox"><input type="checkbox"/>{{list.name}}</div></li>
+			</ul>
+			</fieldset>
+		</div><div class="span4">
+		<fieldset class="well">
+			<legend style="width:auto;">{{project.userProperties.userProfilePickLists[currentListId].name}}</legend>
+			<label>Default Value</label>
+			<select></select>
+			<table>
+				<thead>
+				<tr>
+					<td><input ng-model="newValue" type="text" placeholder="new value"/></td>
+					<td><a ng-click="pickAddItem()"><i class="icon-plus"></i></a></td>
+				</tr>
+				</thead>
+				<tbody>
+				<tr ng-repeat="item in project.userProperties.userProfilePickLists[currentListId].items track by $index">
+					<td>{{item}}</td>
+					<td><a ng-click="pickRemoveItem($index)"><i class="icon-remove"></i></a></td>
+				</tr>
+				</tbody>
+			</table>
 		</fieldset>
 		</div>
 		</div>
