--- a/src/css/sf-ui.css
+++ b/src/css/sf-ui.css
@@ -6,3 +6,17 @@ table.tableform textarea {
 table.tableform td {
 	padding-bottom: 8px;
 }
+
+/* Link hover override for links with icons */
+a:hover i {
+	text-decoration: none;
+}
+
+form fieldset legend {
+	border: 0;
+	width: auto;
+	margin-bottom: 0px;
+	background-color: #f5f5f5;
+	font-size: 1.2em;
+	padding: 0 0.4em;
+}
