--- a/src/angular-app/sfchecks/partials/projectSettings.html
+++ b/src/angular-app/sfchecks/partials/projectSettings.html
@@ -78,17 +78,10 @@
 		<div class="row">
 		<div class="span4">
 		<fieldset class="well">
-			<legend>User Profile</legend>
+			<legend>Show in the User's Profile</legend>
 			<ul class="unstyled">
 				<li ng-click="selectList(listId)" ng-repeat="(listId, list) in project.userProperties.userProfilePickLists"><div class="checkbox"><input type="checkbox"/>{{list.name}}</div></li>
 			</ul>
-			
-			<tabset vertical="true" type="navType">
-				<tab ng-repeat="(listId, list) in project.userProperties.userProfilePickLists">
-					<tab-heading><div class="checkbox"><input type="checkbox"/>{{list.name}}</div></tab-heading>
-					<div class="checkbox"><input type="checkbox"/>Enable <strong>{{list.name}}</strong> list</div>
-				</tab>
-			</tabset>
 		</fieldset>
 		</div><div class="span4">
 		<fieldset class="well">
