CSS Layout Fixes
Fixes to slide indicator layout position. Fix footer height to remove 1px white line at base.

Signed-off-by: Dan Hawes <dan@punctuatecreative.com>

Former-commit-id: d133432a1281c26c2bb22f27e613d729464f55c0

--- a/src/css/sf.css
+++ b/src/css/sf.css
@@ -274,7 +274,7 @@ div#footer, div#footer a, div#footer h4{
 div#footerBaseline {
 	position: relative;
 	width: 100%;
-	height: 40px;
+	height: auto;
 	line-height: 40px;
 	background-color: #202020;
 	color: #aaa;
