--- a/src/views/email/en/SignupWithProjectValidate.html
+++ b/src/views/email/en/SignupWithProjectValidate.html
@@ -1,10 +1,10 @@
-Hi {{name}},
+Hi {{user.name}},
 
-Thanks for joining the {{project}} on ScriptureForge.  In a bid to reduce spam, we need you to activate your account.  You can do this by clicking on the following link:
+Thanks for joining the {{project.projectname}} project on ScriptureForge.  In a bid to reduce spam, we need you to activate your account.  You can do this by clicking on the following link:
 
 {{link}}
 
 This link will be valid for 1 week only.
 
 Regards,
-The ScriptureForge Team
+The {{project.projectname}} Team on ScriptureForge
