add UI improvements
* In user profile the project tab is disabled if no lists are enabled
* In project settings pick lists, hover lightly highlights, selection is highlighted, cursor is pointer


Former-commit-id: b8a9c0488e492b8a855278bc07f5848317d5af3b

--- a/src/angular-app/sfchecks/partials/projectSettings.html
+++ b/src/angular-app/sfchecks/partials/projectSettings.html
@@ -77,10 +77,10 @@
 		<form class="well" data-ng-submit="updateProject()">
 		<div class="row">
 		<div class="span4">
-		<fieldset class="well">
+		<fieldset class="well picklists">
 			<legend>Show in the User's Profile</legend>
 			<ul class="unstyled">
-  				<li data-ng-click="selectList(listId)" data-ng-repeat="(listId, list) in project.userProperties.userProfilePickLists"><div class="checkbox"><input data-ng-model="currentListsEnabled[listId]" type="checkbox"/>{{list.name}}</div></li>
+  				<li data-ng-click="selectList(listId)" data-ng-repeat="(listId, list) in project.userProperties.userProfilePickLists" data-ng-class="{selected:currentListId == listId}"><div class="checkbox"><input data-ng-model="currentListsEnabled[listId]" type="checkbox"/>{{list.name}}</div></li>
 			</ul>
 		</fieldset>
 		</div><div class="span4">
