--- a/src/css/sf-ui.css
+++ b/src/css/sf-ui.css
@@ -20,3 +20,13 @@ form fieldset legend {
 	font-size: 1.2em;
 	padding: 0 0.4em;
 }
+
+fieldset.picklists li {
+	cursor: pointer;
+}
+fieldset.picklists li:hover {
+	background-color: #EEE;
+}
+fieldset.picklists li.selected {
+	background-color: #DDD;
+}
